--- a/css/styles.css
+++ b/css/styles.css
@@ -342,3 +342,67 @@ footer {
 footer p {
   margin: 0;
 }
+
+/* Dropdown container */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown button */
+.dropbtn {
+  background-color: transparent;
+  color: #387f39; /* Warna teks sesuai preferensi Anda */
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown content */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #bedc74; /* Warna latar belakang dropdown */
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #387f39; /* Warna teks */
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change button color when dropdown is active */
+.dropdown:hover .dropbtn {
+  background-color: #f6e96b; /* Warna ketika dropdown aktif */
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+  }
+
+  .nav-links.nav-links-open {
+    display: block;
+  }
+
+  .dropdown-content {
+    position: relative;
+  }
+}
